--- a/css/reset.css
+++ b/css/reset.css
@@ -72,8 +72,12 @@
 	src: url("./font/SCDream9.ttf");
   font-weight: 900;
 }
+#wrap{
+  overflow-y: hidden;
+}
 
 * {
+  
   margin: 0;
   padding: 0;
   border: 0;
