--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@charset "utf-8";@import url("./reset.css");
-/* layout */
+@charset "utf-8";@import url("./reset.css"); /* layout */
 .inner { width: 100%; max-width: 1400px; height: inherit; margin: auto; } 
 
 .width1400 { margin: auto; max-width: 1400px; width: 100%; } 
@@ -94,33 +93,113 @@ section#main h5 .tit2:before { position: absolute; right: 278px; top: 40px; back
 #main .title b:last-child { top: -12px; left: -30px; width: 275px; height: 144px; background: url("../images/mvisual_tit2.png"); font-size: 0; animation-delay: 1s; } 
 
 section#main .inner { padding: 0 100px; } 
-section#main .slider_wrap { max-width: 1200px; width: 100%; height: 667px;  position: relative; } 
-#sliderImg { height: 100%; width: 100%;  overflow: hidden;box-shadow: 20px 0 20px rgb(0 0 0 / 30%); border-radius: 0 0 270px 0; position: relative; } 
-section#main .slider_img { position: relative; width: 100%; height: 100%; } 
-section#main .slider_img li { position: absolute; width: 100%; height: 100%; } 
-section#main .slider_img img { width: 100%; height: 100%; } 
-section#main .slider .subject { display: flex; font-size: 20px; color: #000; margin: 30px 0 0 24px; line-height: 1; } 
-section#main .slider .subject .controls{background-color: red; width: 300px; height: ;}
-section#main .slider .subject .controls li .main_prev a{position: relative; width: 34px; height: 34px; background-color:#4d647a ; border-radius: 50%; margin: 0 4px; vertical-align: middle;}
-section#main .slider .subject .controls li .main_prev a::before{position: absolute; top: 50%; width: 9px; height: 9px; border: 1px solid #fff; border-width: 2px 2px 0 0; content: ""; margin-top: -13px; left: 41%; transform: rotate(-135deg)  translate(-50%, -50%);}
 
-
-.visual_1 { left: 0;  } 
+/* main-slider */
+.slider_wrap { max-width: 1200px; width: 100%; height: 667px; position: relative; } 
+#brandVisual { width: 100%; overflow: hidden; height: 100%; box-shadow: 20px 0 20px rgb(0 0 0 / 30%); border-radius: 0 0 270px 0; position: relative; } 
+#brandVisual ul { position: relative; width: 100%; height: 100%; } 
+#brandVisual ul li { position: absolute; width: 100%; height: 100%; line-height: 667px; } 
+#brandVisual ul li img { width: 100%; height: 100%; } 
+.visual_1 { left: 0; } 
 .visual_2 { left: 100%; } 
 .visual_3 { left: 200%; } 
 
-section#main .slider .subject b { color: #1053a5; position: relative; padding-right: 25px; font-size: 24px; font-weight: bold; letter-spacing: -1px; } 
-section#main .slider .subject b::before { content: ""; display: block; width: 1px; height: 18px; background-color: #7f7f7f; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); } 
-/* section#main .slider .subject .progress { height: 5px; width: 300px; position: absolute; } */
-section#main .slider .subject .main_prev { position: relative; width: 34px; height: 34px; background-color: #4d647a; border-radius: 50%; } 
-section#main .slider .subject .main_prev::before { position: absolute; top: 50%; width: 10px; height: 10px; border: 1px solid #fff; border-width: 2px 2px 0 0; content: ""; display: block; transform: rotate(222deg); } 
-/* section#main .slider .subject .main_stop { } 
-section#main .slider .subject .main_stop::before { } 
-section#main .slider .subject .main_mext { } 
-section#main .slider .subject .main_mext::before { } 
-section#main .slider .subject .main_more { } 
-section#main .slider .subject .main_more::before { } 
- */
+section#main .slider_wrap .subject {position: relative; display: flex; padding: 0 25px; justify-content: space-between; font-size: 20px; color: #000; margin: 30px 24px 0; line-height: 1; } 
+section#main .slider_wrap .subject .controls { position: relative; z-index: 10; display: flex; } 
+section#main .slider_wrap .subject .controls li a{display: block; width: 100%; height: 100%; margin: 0 6px;}
+section#main .slider_wrap .subject .controls li.prev a{position: relative; width: 34px; height: 34px; background-color: #4d647a; border-radius: 50%; margin: 0 4px; vertical-align: middle; } 
+section#main .slider_wrap .subject .controls li.prev a::before { position: absolute; top: 50%; width: 9px; height: 9px; border: 1px solid #fff; border-width: 2px 2px 0 0; content: ""; margin-top: -13px; left: 41%; transform: rotate(-135deg) translate(-50%, -50%); } 
+section#main .slider_wrap .subject .controls li.next a{position: relative; width: 34px; height: 34px; background-color: #4d647a; border-radius: 50%; margin: 0 4px; vertical-align: middle; } 
+section#main .slider_wrap .subject .controls li.next a::before { position: absolute; top: 50%; width: 9px; height: 9px; border: 1px solid #fff; border-width: 2px 2px 0 0; content: ""; margin-top: 2px; left: 31%; transform:rotate(45deg) translate(-50%, -50%); } 
+
+section#main .slider_wrap .subject .controls li.play a{
+    position: relative;
+    width: 34px;
+    height: 34px;
+    background: #4d647a;
+    border-radius: 50%;
+ } 
+section#main .slider_wrap .subject .controls li.play a::before { 
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-top: 4.5px solid transparent;
+    border-left: 7px solid #fff;
+    border-bottom: 4.5px solid transparent;
+    transform: translate(-50%, -50%);
+
+ } 
+section#main .slider_wrap .subject .controls li.stop a{
+    position: relative;
+    width: 34px;
+    height: 34px;
+    background: #4d647a;
+    border-radius: 50%;
+ } 
+section#main .slider_wrap .subject .controls li.stop a::before { 
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 13px;
+    background-color: #fff;
+    width: 2px;
+    height: 50%;
+    transform: translateY(-50%);
+ } 
+ section#main .slider_wrap .subject .controls li.stop a::after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 13px;
+    background-color: #fff;
+    width: 2px;
+    height: 50%;
+    transform: translateY(-50%);
+ }
+
+section#main .slider_wrap .subject .controls li.more a{
+    position: relative;  
+    display: block;
+    margin-left: 10px;
+    width: 34px;
+     height: 34px;
+      background-color: #1053a5;
+       border-radius: 50%;
+    } 
+section#main .slider_wrap .subject .controls li.more a::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    content: "";
+    height: 2px;
+    width: 12px;
+    background: #fff;
+ } 
+section#main .slider_wrap .subject .controls li.more a::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    content: "";
+    height: 12px;
+    width: 2px;
+    background: #fff;
+ } 
+
+
+#buttonList { display: none; position: absolute; top: 300px; left: 50%; } 
+
+section#main .slider_wrap .subject b { color: #1053a5; position: relative; font-size: 24px; font-weight: bold; letter-spacing: -1px; } 
+section#main .slider_wrap .subject b::before { content: ""; display: block; width: 1px; height: 18px; background-color: #7f7f7f; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); } 
+section#main .slider .subject .progress { height: 5px; width: 300px; position: absolute; }
+
+
 
 .main_btn { width: 100%; position: absolute; display: flex; justify-content: space-between; bottom: 40px; left: 0; } 
 /* .btn_right { position: absolute; left: -180px; top: 0; } */
