--- a/css/style.css
+++ b/css/style.css
@@ -245,12 +245,16 @@ section#pick .ani3 { position: absolute; top: -110px; right: 160px; width: 98px;
 section h4 { font-size: 56px; color: #222; line-height: 1; text-align: center; font-weight: normal; margin-bottom: 5px; } 
 section h4 + p { font-size: 16px; font-family: "ng"; line-height: 2.6; color: #555; font-weight: 300; text-align: center; } 
 
+/* tab menu */
+.tab-content{position: relative; min-height: 330px;}
+.tab-content>ul{position: absolute;}
 #pick .pick_btn .tab { justify-content: center; margin: 24px 0; } 
 #pick .pick_btn .tab li { position: relative; width: 170px; margin: 0 8px; background-color: #71879b; line-height: 50px; display: block; border-radius: 170px; transition: background-color 0.3s; } 
 #pick .pick_btn .tab li:hover,
 #pick .pick_btn .tab li:active,
 #pick .pick_btn .tab li:focus { background-color: #1053a5; } 
 #pick .pick_btn .tab li a { width: 100%; display: block; color: #fff; text-align: center; } 
+#pick .pick_btn .tab li a.active { background-color: #1053a5;border-radius: 170px; } 
 #pick .pick_btn .tab li a span { vertical-align: middle; margin-right: 5px; margin-bottom: 5px; content: ""; display: inline-block; } 
 #pick .pick_btn .tab li.tab1 a span { width: 24px; height: 28px; background: url(../images/main_ir.png) -26px 0; } 
 #pick .pick_btn .tab li.tab2 a span { width: 32px; height: 28px; background: url(../images/main_ir.png) -53px 0; } 
@@ -259,20 +263,20 @@ section h4 + p { font-size: 16px; font-family: "ng"; line-height: 2.6; color: #5
 
 #pick .inner { position: relative; padding-bottom: 30px; } 
 
-#pick .inner > ul.df { justify-content: space-between; align-items: flex-end; margin-top: 50px; font-family: "ng"; } 
-#pick .inner > ul.df li { width: 257px; overflow: hidden; height: 328px; border-radius: 18px; box-shadow: 10px 0 15px rgb(0 0 0 / 15%); background-color: #fff; } 
+.tab-content> ul.df { justify-content: space-between; align-items: flex-end; margin-top: 50px; font-family: "ng"; } 
+.tab-content> ul.df li { width: 257px; overflow: hidden; height: 328px; border-radius: 18px; box-shadow: 10px 0 15px rgb(0 0 0 / 15%); background-color: #fff; } 
 
-#pick .inner > ul.df li:nth-child(1) { margin: 0 0 100px; } 
-#pick .inner > ul.df li:nth-child(2) { margin: 0 0 50px; } 
-#pick .inner > ul.df li:nth-child(4) { box-shadow: 10px 0 15px rgb(0 0 0 / 15%); margin: 0 0 100px; } 
-#pick .inner > ul.df li:nth-child(5) { box-shadow: -15px 5px 15px rgb(0 0 0 / 15%); margin: 0 0 50px; } 
+.tab-content> ul.df li:nth-child(1) { margin: 0 0 100px; } 
+.tab-content> ul.df li:nth-child(2) { margin: 0 0 50px; } 
+.tab-content> ul.df li:nth-child(4) { box-shadow: 10px 0 15px rgb(0 0 0 / 15%); margin: 0 0 100px; } 
+.tab-content> ul.df li:nth-child(5) { box-shadow: -15px 5px 15px rgb(0 0 0 / 15%); margin: 0 0 50px; } 
 
-#pick .inner > ul.df li .thumb { position: relative; height: 210px; } 
-#pick .inner > ul.df li .thumb img { width: auto; height: 100%; } 
-#pick .inner > ul.df li .thumb::after { position: absolute; left: 0; bottom: 0; z-index: 1; width: 100%; height: 26px; background: url("../images/mcont1_imgbg.png"); content: ""; } 
+.tab-content> ul.df li .thumb { position: relative; height: 210px; } 
+.tab-content> ul.df li .thumb img { width: auto; height: 100%; } 
+.tab-content> ul.df li .thumb::after { position: absolute; left: 0; bottom: 0; z-index: 1; width: 100%; height: 26px; background: url("../images/mcont1_imgbg.png"); content: ""; } 
 
-#pick .inner > ul.df li .txt { padding: 20px; text-align: center; line-height: 1.4; color: #797979; font-weight: 500; } 
-#pick .inner > ul.df li .txt b { display: block; font-size: 20px; color: #3d3d3d; font-weight: 900; line-height: 1.2; letter-spacing: -0.05em; margin-bottom: 10px; } 
+.tab-content> ul.df li .txt { padding: 20px; text-align: center; line-height: 1.4; color: #797979; font-weight: 500; } 
+.tab-content> ul.df li .txt b { display: block; font-size: 20px; color: #3d3d3d; font-weight: 900; line-height: 1.2; letter-spacing: -0.05em; margin-bottom: 10px; } 
 
 /* location */
 section#location .li { position: absolute; overflow: hidden; left: 50%; top: -85px; width: 194px; height: 139px; margin-left: -260px; background: url("../images/title_bg1.png") no-repeat left bottom; } 
